# fascode-system-dashboard

./: .gitignore  Makefile  fascode-system-dashboard.desktop  meson.build  setup.py  system-dashboard  system-dashboard.py  system_dashboard.conf  system_dashboard.py  util.py
data/: meson.build  org.fascode.dashboard.gresource.xml
data/ui/: about-dialog.ui  about-dialog.ui~  disk-speed.ui  net-speed.ui  swap-box.ui  window.ui  window.ui~
fascode-system-dashboard/: application.py  cairo_util.py  circle.py  fascode-system-dashboard.py  graph.py  label.py  process.py  speed.py  util.py
po/: fascode-system-dashboard.pot  ja.po
src/: app.vala  circle.vala  core.vala  cpu.vala  dashboard.vala  dialog.vala  disk.vala  header.vala  mem.vala  meson.build  net.vala  swap.vala  util.vala  window.vala
system_dash/: __init__.py  cairo_util.py  circle.py  gui.py  table.py  util.py
vapi/: libgtop-2.0.vapi
